# pico-sound-explorer

./: .gitignore  ADSR_IMPLEMENTATION.md  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  build.sh  pico_sdk_import.cmake
examples/: basic_config.h  hardware_schematic.txt
include/: adsr_envelope.h  sound_explorer.h  uart_comm.h  ui_controls.h  waveform_generator.h
src/: adsr_envelope.c  main.c  uart_comm.c  ui_controls.c  waveform_generator.c
